# parsync

./: ARCHITECTURE.md  Cargo.toml  LICENSE  PKGBUILD  README.md  pyproject.toml
.cargo-husky/hooks/: pre-push
.github/workflows/: benchmark.yml  release.yml  rust.yml
benches/: local_transfer.rs  sync_benchmarks.rs  throughput.rs
data/: README.md
data/broken_symlinks/: temp_symlink.txt
data/simple_files/: temp.txt
data/symlinks/: temp_symlink.txt
src/: lib.rs  main.rs  sync.rs  utils.rs
src/backends/: local.rs  mod.rs  ssh.rs
src/parsync/: __init__.py  bandwidth.py  jobs.py  main.py  wrapper.py
src/protocols/: local_protocol.rs  local_sink.rs  local_source.rs  metadata.rs  mod.rs  protocol.rs  sink.rs  source.rs  ssh_protocol.rs  ssh_session.rs  ssh_sink.rs  ssh_source.rs  synchronizer.rs  traits.rs
tests/: benchmarks.rs  integration_tests.rs  local_backend.rs
