[package]
name = "parsync"
version = "0.3.0"
edition = "2021"
description = "A parallel file synchronizer"

[dependencies]
ascii_table = "4.0.6"
blake3 = "1.8.1"
clap = { version = "4.5.31", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.17.11"
log = "0.4.26"
rayon = "1.10.0"
regex = "1.11.1"
ssh2 = "0.9"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.19.1"
criterion = "0.5"

[[bench]]
name = "local_transfer"
harness = false
