[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parsync"
version = "0.1.0"
description = "rsync wrapper with optimized parallelization"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Saphereye", email = "adarshdas950@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
    "types-requests",
    "pre-commit>=3.0.0",
]

[project.scripts]
parsync = "parsync.main:main"

[project.urls]
Homepage = "https://github.com/Saphereye/parsync"
Repository = "https://github.com/Saphereye/parsync"
Issues = "https://github.com/Saphereye/parsync/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/parsync"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = false
warn_unused_configs = true
